# SmplOSV3

./: .gitignore  CMakeLists.txt  Makefile  README.md  bochs  boot.cfg  build.sh  grub.cfg  launch-dbg.sh  launch.sh  mount.sh
bootloader/: BOOTX64.EFI  Makefile
bootloader/include/: bootinfo.h  commons.h  config.h  elf.h  log.h  mem.h  utils.h
bootloader/src/: assembly.S  config.c  elf.c  log.c  main.c  mem.c  utils.c
include/: io.h
include/loader/: elf64.h  io.h  log.h  memory.h  multiboot2.h  serial.h
include/loader/util/: printf.h  string.h
kernel/: Makefile  link.ld
kernel/include/: commons.h  log.h
kernel/include/dev/: framebuffer.h  io.h  serial.h
kernel/src/: crt0.asm  libk.c  main.c
kernel/src/dev/: framebuffer.c  io.c  serial.c
libc/: Makefile  Makefile.libc  Makefile.libk
libc/include/: assert.h  stdio.h  stdlib.h  string.h
libc/src/: assert.c  printf.c  stdlib.c  string.c
shared/: shared.h
src/kernel/: CMakeLists.txt  boot.asm  kernel.c
src/kernel/include/: elf64.h  interrupts.h  io.h  memory.h  module.h  panic.h  proc.h  syscall.h  util.h
src/kernel/include/dev/: log.h  pci.h  pit.h  serial.h  vfs.h
src/kernel/include/fs/: tar.h
src/kernel/include/subkernel/: iface.h
src/kernel/include/types/: dyn_array.h  registers.h  stack.h
src/kernel/src/: elf64.c  kernel.c  libk.c  module.c  panic.asm  panic.c  util.c
src/kernel/src/dev/: io.c  log.c  pci.c  pit.c  serial.c  vfs.c
src/kernel/src/fs/: tar.c
src/kernel/src/int/: interrupts.asm  interrupts.c  syscall.c
src/kernel/src/mem/: heap.c  paging.asm  paging.c  pmm.c
src/kernel/src/proc/: proc.asm  proc.c
src/kernel/src/subkernel/: iface.c
src/libc/: CMakeLists.txt
src/libc/include/: assert.h  stdio.h  stdlib.h  string.h
src/libc/src/: assert.c  printf.c  stdlib.c  string.c
src/loader/: CMakeLists.txt  io.c  loader.c  log.c  serial.c
src/loader/include/: bootinfo.h  elf64.h  log.h  memory.h
src/loader/include/util/: string.h
src/loader/src/: boot.asm  elf64.c  io.c  loader.c  log.c  memory.c  serial.c
src/loader/src/asm/: util.asm
src/loader/src/util/: div.c  printf.c  string.c
src/loader/util/: printf.c
src/modules/: CMakeLists.txt
src/modules/src/ata/: CMakeLists.txt
src/modules/src/ata/include/: ata.h
src/modules/src/ata/src/: ata.c
src/modules/src/test/: CMakeLists.txt
src/modules/src/test/src/: test.c
src/subkernels/: CMakeLists.txt
src/subkernels/src/native/: CMakeLists.txt
src/subkernels/src/native/init/: main.c
src/test_init/: CMakeLists.txt
src/test_init/src/: link.ld  main.asm  main.c
