MESSAGE(STATUS "Starting kernel build")
set(CMAKE_C_FLAGS "-O0 -ffreestanding -std=gnu99 -Wall -Wextra")
set(CMAKE_ASM_NASM_OBJECT_FORMAT elf32)
enable_language(ASM_NASM)
add_link_options(-T ${CMAKE_CURRENT_SOURCE_DIR}/link.ld -ffreestanding -nostdlib -lgcc)
FILE(GLOB C_SRCS *.c)
FILE(GLOB BOOT boot.asm)
ADD_EXECUTABLE(smplos.bin ${BOOT} ${C_SRCS})
install(TARGETS smplos.bin DESTINATION /mnt/smplos/boot)
