cmake_minimum_required(VERSION 3.20)
MESSAGE(STATUS "Starting loader build")
set(CMAKE_C_FLAGS "-O0 -ffreestanding -std=gnu99 -Wall -Wextra")
set(CMAKE_ASM_NASM_OBJECT_FORMAT elf32)
set(CMAKE_C_COMPILER "/usr/bin/i686-elf-gcc")
set(CMAKE_FIND_ROOT_PATH "/usr/i686-elf")
set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
enable_language(ASM_NASM)
enable_language(C)
include_directories(include)
project(SmplOSV3-exo-loader VERSION 1.0)
add_link_options(-T ${CMAKE_CURRENT_SOURCE_DIR}/src/link.ld -ffreestanding -nostdlib -lgcc)
add_definitions(-DK_SMPLOS_LOADER)
FILE(GLOB ASM_SRCS src/asm/*.asm)
FILE(GLOB C_SRCS src/*.c src/util/*.c)
FILE(GLOB BOOT src/boot.asm)
ADD_EXECUTABLE(smplos_loader.bin ${BOOT} ${ASM_SRCS} ${C_SRCS})
install(TARGETS smplos_loader.bin DESTINATION /mnt/smplos/boot)
INSTALL (
    DIRECTORY   ${CMAKE_SOURCE_DIR}/include/
    DESTINATION ${CMAKE_SOURCE_DIR}/../../sysroot/include/loader
    FILES_MATCHING PATTERN "*.h*")